--- a/inz/bibliografia.bib
+++ b/inz/bibliografia.bib
@@ -1,85 +1,75 @@
-@misc{javaWikiPL,
-  title = {{Java}},
-  howpublished = "\url{http://pl.wikipedia.org/wiki/Java}",
-  note = "[Online; dostęp 16.11.2014]"
-}
 @misc{developer.android,
-  title = {{Android}},
+  title = {{Strona domowa deweloperów systemu Android}},
   howpublished = "\url{http://developer.android.com}",
-  note = "[Online; dostęp 16.11.2014]"
+  note = "\newline[Online; dostęp 16.11.2014]"
 }
 @misc{developer.google,
-  title = {{Google}},
+  title = {{Strona domowa deweloperów aplikacji Google}},
   howpublished = "\url{http://developer.google.com}",
-  note = "[Online; dostęp 16.11.2014]"
+  note = "\newline[Online; dostęp 16.11.2014]"
  }
 @misc{java.doc,
-  title = {{dokumentacj Javy}},
+  title = {{Specyfikacja języka Java}},
   howpublished = "\url{https://docs.oracle.com/javase/specs/jls/se8/html/index.html}",
   note = "\newline[Online; dostęp 16.11.2014]"
 }
-@misc{apache.wiki,
-  title = {{Apache HTTP serwer}},
-  howpublished = "\url{http://en.wikipedia.org/wiki/Apache_HTTP_Server}",
-  note = "\newline[Online; dostęp 16.11.2014]"
-}
-@misc{apache.tomcat,
-  title = {{Apache Tomcat}},
-  howpublished = "\url{http://tomcat.apache.org/}",
-  note = "[Online; dostęp 16.11.2014]"
-}
 @misc{apache.org,
-  title = {{Apache Org}},
+  title = {{Strona domowa oprogramowania Apache}},
   howpublished = "\url{http://apache.org/}",
   note = "[Online; dostęp 16.11.2014]"
 }
-@misc{javascript.wiki,
-  title = {{JavaScript wiki}},
-  howpublished = "\url{http://pl.wikipedia.org/wiki/JavaScript}",
-  note = "[Online; dostęp 16.11.2014]"
+@misc{tomcat.org,
+  title = {{Strona domowa Servletu Tomcat}},
+  howpublished = "\url{http://tomcat.apache.org/}",
+  note = "[Online; dostęp 26.11.2014]"
+}
+@misc{javascript.dev,
+  title = {{Dokumentacja języka JavaScript}},
+  howpublished = "\url{https://developer.mozilla.org/pl/docs/Web/JavaScript}",
+  note = "[Online; dostęp 06.12.2014]"
 }
 @misc{xml.wiki,
-  title = {{xml wiki}},
-  howpublished = "\url{http://pl.wikipedia.org/wiki/XML}",
+  title = {{Język XML}},
+  howpublished = "\url{http://en.wikipedia.org/wiki/XML}",
   note = "[Online; dostęp 16.11.2014]"
 }
 @misc{java.mvc,
-  title = {{Java MVC}},
-  howpublished = "\url{http://www.oracle.com/technetwork/articles/javase/index-142890.html}",
+  title = {{Dokumentacja modelu Model-Viev-Controller}},
+  howpublished = "\newline\url{http://www.oracle.com/technetwork/articles/javase/index-142890.html}",
   note = "\newline[Online; dostęp 26.11.2014]"
 }
 
 @misc{java.mvc.grafika,
-  title = {{Java MVC}},
-  howpublished = "\url{http://www.javatpoint.com/model-1-and-model-2-mvc-architecture}",
+  title = {{Model MVC, zdjęcie struktury modelu}},
+  howpublished = "\url{http://en.wikipedia.org/wiki/JavaServer_Pages}",
   note = "\newline[Online; dostęp 26.11.2014]"
 }
-@misc{tomcat.org,
-  title = {{Tomcat.org}},
-  howpublished = "\url{http://tomcat.apache.org/}",
-  note = "[Online; dostęp 26.11.2014]"
-}
+
 @misc{Mysql.com,
-  title = {{MySQL}},
-  howpublished = "\url{http://dev.mysql.com/doc/refman/5.6/en/introduction.html}",
+  title = {{Strona domowa systemu zarządzania bazą danych -- MySQL}},
+  howpublished = "\newline\url{http://dev.mysql.com/doc/refman/5.6/en/introduction.html}",
   note = "\newline[Online; dostęp 26.11.2014]"
 }
 @misc{developer.google.maps,
-  title = {{Google}},
+  title = {{Witryna Google Maps API Web Services}},
   howpublished = "\url{https://developers.google.com/maps/documentation/webservices/}",
   note = "\newline[Online; dostęp 16.11.2014]"
  }
  @misc{szablon,
-  title = {{szablon}},
+  title = {{Szablon serwisu klienckiego}},
   howpublished = "\url{http://templated.co/linear}",
   note = "[Online; dostęp 16.11.2014]"
  }
  @misc{eclipse,
-  title = {{eclipse with adnroid sdk}},
-  howpublished = "\url{https://developer.android.com/sdk/index.html}",
+  title = {{Strona do pobrania IDE Eclipse z dodatkiem Android SDK}},
+  howpublished = "\newline\url{https://developer.android.com/sdk/index.html}",
   note = "\newline[Online; dostęp 11.11.2014]"
  }
+ @misc{java.oracle.ee,
+  title = {{Dokumentacja języka Java}},
+  howpublished = "\newline\url{http://www.oracle.com/technetwork/java/javaee/documentation/index.html}",
+  note = "\newline[Online; dostęp 21.11.2014]"
+ }
  
-
 
 
