--- a/inz/document.tex
+++ b/inz/document.tex
@@ -98,9 +98,9 @@
 
 %dane do zlozenia strony tytulowej
 \title{System monitoringu lokalizacji przesyłek kurierskich}
-\engtitle{English title}
+\engtitle{System of monitoring deliveries}
 \author{Monika Strachowska}
-\supervisor{Prof dr hab. inz. Czesław Smutnicki, \newline Katedra \ldots}
+\supervisor{Prof dr hab. inz. Czesław Smutnicki}
 %\guardian{dr hab. inz. Imie Nazwisko Prof. PWr, I-6} %nie uzywac jesli opiekun jest ta sama osoba co prowadzacy prace
 
 %\date{2008} %standardowo u dolu strony tytulowej umieszczany jest biezacy rok, to polecenie pozwala wstawic dowolny rok
@@ -258,7 +258,7 @@ w ramach interfejsu użytkownika, ale także może posiadać} swoją
 logikę. Ostatnim elementem systemu jest Kontroler, który spaja dwie wcześniejsze
 części. Kontroler odpowiada za przepływ danych od/do użytkownika, reakcję
 systemu w zależności od zachowania użytkownika -- zarządza
-takzę Modelem i Widokiem. W takiej strukturze jest jasno zdefiniowane, która
+także Modelem i Widokiem. W takiej strukturze jest jasno zdefiniowane, która
 część systemu pełni jakie funkcje. Ta struktura architektoniczna 
 jest najczęściej stosowana w aplikacjach WWW, gdzie widać
 wyraźną granicę pomiędzy widokiem i modelem, a kontrolerem jest serwer, który
@@ -453,7 +453,7 @@ znacznie rzadziej wykorzystywane, dlatego nie zostały tutaj przytoczone.
 
 Android jest systemem operacyjnym wykorzystywanym na platformach mobilnych,
 zbudowanym w oparciu o jądro Linux. Umożliwia tworzenie aplikacji na wiele
-urządzeń -- dokonywane to jest przez dostowanie pliku XML, w którym
+urządzeń -- dokonywane to jest przez dostosowanie pliku XML, w którym
 dostosowuje się aplikację do konkretnej wersji API. System Android ma taką
 właściwość, że każda włączona aplikacja jest uruchamiana na maszynie
 wirtualnej i jest niezależna od pozostałych. Najnowszą wersją systemu
@@ -509,10 +509,10 @@ Wart uwagi jest element \texttt{Activity}, reprezentujący ekran użytkownika,
 oferujący interakcję z użytkownikiem. Najczęściej okno aplikacji wypełnia
 cały wyświetlacz, ale może być mniejsze lub pływające na tle innych okien.
 
-Utworzenie aplikacji korzystającej z właśności \texttt{Activity} wymaga
+Utworzenie aplikacji korzystającej z własności \texttt{Activity} wymaga
 zaimplementowania podklasy \texttt{Activity}, w tej podklasie należy zdefiniować metody, które będą
 określały aktywność pomiędzy różnymi stanami cyklu jej życia. Przez cykl życia
-aktywaności rozumie się jej tworzenie, zatrzymywanie, wznawianie i niszczenie.
+aktywności rozumie się jej tworzenie, zatrzymywanie, wznawianie i niszczenie.
 Metoda \texttt{onCreate()} określa stan aktywności podczas jej tworzenia. Metoda
 \texttt{onPause()} definiuje stan aktywności w momencie opuszczenia jej przez
 użytkownika. Opuszczenie aktywności nie musi oznaczać jej zakończenia, typowo
@@ -1679,26 +1679,6 @@ projekty. Import projektów odbywa się poprzez wybranie
 
 \chapter{Wnioski i podsumowanie}
 
-
-Aplikację można „podpiąć” pod prawdziwe urządzenia jakie posiadają kurierzy – te
-na których się człowiek podpisuje – ale konieczne będzie
-zrefakturyzowanie(?)/zmianie kodu pod system, który mają tam zainstalowany.
-	Fajnie by było to wrzucić na prawdziwe tablety, można by sprzedawać/zarobić.
-	Ogólnie koszt takiego urządzenia to byłoby tablet/telefon + wycena za program.
-	Normalnie kurierzy używają kolektorów danych.
-	
-	
- Nie tylko GPS do lokalizacji, bo także odbicia
-na czytnikach u kurierów Projekt opiera się 
-
-Projekt został zrealizowany z wykorzystaniem takich
-technologi jak: język programowania Java, system operacyjny Android, baza danych
-MySQL, Google Apis. Firmy kurierskie maja najprawdopodobniej system „Windows
-ce/mobile” na swoich urządzenia. Ja ze względu na brak takiego urządzenia
-(mobilnego z Windowsem) zrealizuje zadanie na Androidzie.
-
-
-
 Wykorzystanie rozwiązań bazujących na otwartym kodzie źródłowym w połączeniu 
 z tanimi w eksploatacji i zakupie platformami sprzętowymi działającymi na systemie 
 Android może stanowić ciekawą alternatywę dla firm przewozowych chcących wykorzystać 
@@ -1707,18 +1687,31 @@ w czasie pseudorzeczywistym. Obecnie stosowane rozwiązania są mało dokładne,
 potrzebna infrastruktura jest droga, a konieczność stosowania aplikacji i 
 platform bez publicznego API ogranicza możliwość rozbudowy.
 
-Wszystkie wykorzystane w projekcie technologie mogą z powodzeniem zostać wykorzystane
- w projekcie komercyjnym. Wykorzystując fakt, że każdy dostawca musi zostać obowiązkowo
-  wyposażony w telefon komórkowy można w prosty sposób zrealizować implementację
-   opracowanego systemu bez dodatkowych nakładów finansowych na nowe urządzenia
-    mobilne. Ponadto wykorzystanie publicznego API do komunikacji urządzeń z
-     serwerem powoduje, że nie ogranicza nas system operacyjny urządzenia
-      przenośnego (pod warunkiem, że na inny system również zostanie napisana 
-      odpowiednia wersja aplikacji). Wykorzystanie publicznego interfejsu narzuca 
-      jednak konieczność zadbania o bezpieczeństwo i spójność informacji, czyli, 
-      np. autoryzację urządzenia przy zapytaniu czy wprowadzenie bezpiecznych połączeń https.
+Wszystkie wykorzystane w projekcie technologie mogą z powodzeniem zostać
+wykorzystane w projekcie komercyjnym. Wykorzystując fakt, że każdy dostawca musi
+zostać obowiązkowo wyposażony w telefon komórkowy można w prosty sposób
+zrealizować implementację opracowanego systemu bez dodatkowych nakładów
+finansowych na nowe urządzenia mobilne. Ponadto wykorzystanie publicznego API do
+komunikacji urządzeń z serwerem powoduje, że nie ogranicza nas system operacyjny
+urządzenia przenośnego (pod warunkiem, że na inny system również zostanie
+napisana odpowiednia wersja aplikacji). Wykorzystanie publicznego interfejsu
+narzuca jednak konieczność zadbania o bezpieczeństwo i spójność informacji,
+czyli, np. autoryzację urządzenia przy zapytaniu czy wprowadzenie bezpiecznych połączeń HTTPS.
+Ostatnim wartym uwagi jest fakt, że w projekcie skorzystano z technologii, które
+są nowoczesne, ciągle rozwijające się i ogólnie znane.
 
-\ref{}
+Wykonaną aplikację można rozszerzyć o dodatkową funkcjonalność: skanowanie
+kodów przesyłek czy podpis odbiorcy. Aby osiągnąć nową własność aplikacji --
+skanowanie kodów przesyłek -- w aplikacji mobilnej należałoby pobrać zdjęcie
+wykonane aparatem fotograficznym wbudowanym w urządzenie, a następnie
+przetworzyć to zdjęcie w tymże urządzeniu lub nawet oddelegować na serwer, który
+tylko zwróciłby wynik w postaci ciągu cyfr. Taka czynność wymagałaby
+zaimplementowania algorytmów przetwarzania obrazu. Natomiast funkcja sczytująca
+podpis odbiorcy powinna tylko zapamiętywać jego podpis (nie jest konieczne
+przetwarzanie podpisu odbiorcy) i wysyłać go na serwer. W ten czas aplikacja
+poszerzona o te funkcje z sukcesem mogłaby zastąpić obecne kolektory danych
+jakie używane są przez dostawców.
+
 
 \addcontentsline{toc}{chapter}{Bibliografia} %utworzenie w spisie tresci pozycji Bibliografia
 \bibliography{bibliografia} % wstawia bibliografie korzystajac z
